<resources>
    <string name="app_name">WhatsApp Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="login_activity">Login Activity</string>
    <string name="email">Email</string>
    <string name="login_now">Login Now</string>
    <string name="not_member_register_now">Not Member? Register Now</string>
    <string name="type_a_message">Type a message</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="hello">Hello!</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
</resources>